# amazon_cognito_rust

./: Cargo.toml  Makefile  README.md
hyper-native-tls/: Cargo.toml
src/: error.rs  lib.rs
src/cognito/: credentials.rs  helpers.rs  mod.rs  session.rs  tools.rs  user.rs
src/cognito/requests/: confirm_device.rs  get_credentials_for_identity.rs  get_id.rs  get_open_id_token.rs  get_user.rs  initiate_auth.rs  mod.rs  respond_to_auth_challenge.rs
