[package]
authors = ["kyunghoon <kyunghoon@gmail.com>"]
name = "amazon_cognito_rust"
version = "0.1.0"
description = "amazon cognito client in rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/kyunghoon/amazon_cognito_rust.git"

[dependencies]
base64 = "0.6.0"
chrono = "0.4.0"
env_logger = "0.4"
hex = "0.2"
hmac = "0.4.2"
hyper = "0.10.0"
hyper-native-tls = "0.2.4"
log = "0.3.8"
num = "0.1.40"
ring = "0.11.0"
rusoto_cognito_identity = "0.28.0"
rusoto_core = "0.28.0"
rusoto_s3 = "0.28.0"
serde = "1.0.15"
serde_derive = "1.0.2"
serde_json = "1.0.3"
sha2 = "0.6.0"
time = "0.1.35"
url = "1.2.0"

[lib]
name = "amazon_cognito_rust"
path = "src/lib.rs"
